--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,7 @@
   html,
   body,
   #__next {
-    @apply m-0 h-full overflow-hidden p-0;
+    @apply m-0 h-dvh overflow-hidden p-0;
   }
 }
 
@@ -37,11 +37,11 @@
   }
 
   .login-container {
-    @apply bg-dots flex h-full w-full items-center justify-center p-4;
+    @apply bg-dots flex h-dvh w-full items-center justify-center p-4;
   }
 
   .login-container__form-container {
-    @apply w-full sm:w-1/2 xl:w-1/3;
+    @apply w-full  sm:w-1/2 xl:w-1/3;
   }
 
   .login-container__form {
@@ -97,7 +97,7 @@
   }
 
   .layout__sidebar-1 {
-    @apply flex h-full flex-col items-start justify-start gap-3 bg-primary p-3;
+    @apply flex h-dvh flex-col items-start justify-start gap-3 bg-primary p-3;
   }
 
   .layout__sidebar-1__btn {
@@ -213,7 +213,7 @@
   }
 
   .layout__inner-message__scroll {
-    @apply flex h-full flex-col-reverse overflow-y-auto px-4 py-[150px];
+    @apply flex h-dvh flex-col-reverse overflow-y-auto px-4 py-[150px];
   } 
 
   .layout__inner-message__message{
